syntax = "proto3";

package goods;

option go_package = "./proto;goods";

service Goods {
	rpc AddGoods(AddGoodsRequest) returns (AddGoodsResponse) {}
	rpc GetGoods(GetGoodsRequest) returns (GetGoodsResponse) {}
}

message GoodsModel {
	string title = 1;
	double price=2;
	string content=3;
}

message AddGoodsRequest {
	GoodsModel params=1;
}

message AddGoodsResponse {
	string message = 1;
	bool success=2;
}

message GetGoodsRequest{}

message GetGoodsResponse{
	repeated GoodsModel GoodsList=1;
}